--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-prom-bundle": "^6.6.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
     "node": "^19.3.0",
+    "prom-client": "^14.2.0",
     "pug": "^3.0.2",
     "sessionstorage": "^0.1.0"
   },
